--- a/APICloudGateway/src/main/resources/application.yml
+++ b/APICloudGateway/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         - id: PlantNursery-Service
           uri: http://localhost:8081/
           predicates:
-            - Path=/api/v1/**
+            - Path=/plant/**
        
         - id: Customer-Service
           uri: http://localhost:8086/
